--- a/webapp/2.html
+++ b/webapp/2.html
@@ -1,19 +1,19 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>WEB1-html</title>
+    <title>WEB1-css</title>
     <meta charset="utf-8">
   </head>
   <body>
-    <h1><a href="index.html">WEB</a></h1>
+    <h1><a href="index.html"></a>WEB</h1>
     <ol>
       <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
+      <li><a htef="2.html">CSS</a></li>
       <li><a href="3.html">JavaScript</a></li>
     </ol>
 
-    <h2>HTML이란 무엇인가</h2>
-    웹 백엔드 개발자가 되기 위한 <strong><u>초석</u></strong>을 다지자.
+    <h2>CSS란 무엇인가</h2>
+    언제 다하지
     <p style = "margin-top:40px;">가나다라마바사</p><img src="./unsplash.jpg" width = "50%"><p><a href="https://codingfull.tistory.com" target="_blank" title="블로그로 이동합니다.">코딩이 가득한 코딩노트</a></p>
   </body>
 </html>
