--- a/webapp/2.html
+++ b/webapp/2.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1><a href="index.html"></a>WEB</h1>
+    <h1><a href="full.html"></a>WEB</h1>
     <ol>
       <li><a href="1.html">HTML</a></li>
       <li><a htef="2.html">CSS</a></li>
