--- a/webapp/2.html
+++ b/webapp/2.html
@@ -3,15 +3,32 @@
   <head>
     <title>WEB1-css</title>
     <meta charset="utf-8">
+    <style>
+    a{
+      color : black;
+      text-decoration : none;
+    }
+    h1{
+      font-size:50px;
+      text-align : center;
+    }
+    </style>
   </head>
   <body>
+    <h1><a href="full.html">WEB</a></h1>
+    <ol>
+      <li><a href="1.html">HTML</a></li>
+      <li><a href="2.html" style = "color:red ;text-decoration:underline;">CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
+    </ol>
+    <!--
     <h1><a href="full.html"></a>WEB</h1>
     <ol>
       <li><a href="1.html">HTML</a></li>
-      <li><a htef="2.html">CSS</a></li>
+      <li><a href="2.html">CSS</a></li>
       <li><a href="3.html">JavaScript</a></li>
     </ol>
-
+-->
     <h2>CSS란 무엇인가</h2>
     언제 다하지
     <p style = "margin-top:40px;">가나다라마바사</p><img src="./unsplash.jpg" width = "50%"><p><a href="https://codingfull.tistory.com" target="_blank" title="블로그로 이동합니다.">코딩이 가득한 코딩노트</a></p>
