--- a/webapp/3.html
+++ b/webapp/3.html
@@ -3,17 +3,27 @@
   <head>
     <title>WEB1-javascript</title>
     <meta charset="utf-8">
+    <style>
+    a{
+      color : black;
+      text-decoration : none;
+    }
+    h1{
+      font-size:50px;
+      text-align : center;
+    }
+    </style>
   </head>
   <body>
     <h1><a href="full.html">WEB</a></h1>
     <ol>
       <li><a href="1.html">HTML</a></li>
-      <li><a htef="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
+      <li><a href="2.html">CSS</a></li>
+      <li><a href="3.html" style="color:red; text-decoration:underline;">JavaScript</a></li>
     </ol>
 
     <h2>JavaScript란 무엇인가</h2>
     <strong>우</strong>르<strong>러</strong>르<strong>라</strong>ㅏ<strong>안</strong>
-    <p style = "margin-top:40px;">가나다라마바사</p><img src="./unsplash.jpg" width = "50%"><p><a href="https://codingfull.tistory.com" target="_blank" title="블로그로 이동합니다.">코딩이 가득한 코딩노트</a></p>
+    <p style = "margin-top:40px;">가나다라마바사</p><img src="./rabbit.png" width = "50%"><p><a href="https://codingfull.tistory.com" target="_blank" title="블로그로 이동합니다.">코딩이 가득한 코딩노트</a></p>
   </body>
 </html>
