--- a/webapp/full.html
+++ b/webapp/full.html
@@ -4,6 +4,12 @@
     <title> WEB1-index</title>
     <meta charset="utf-8">
     <style>
+    #active{
+      color: red;
+    }
+    .saw{
+      color: gray;
+    }
     a{
       color : black;
       text-decoration : none;
@@ -23,6 +29,6 @@
     </ol>
     <h2>WEB이란 무엇인가</h2>
     <p margin-top = "40px"><img src="unsplash.jpg" width = "50%"></p>
-    <a href="http://codingfull.tistory.com" target="_blank" title="Move to Blog">CodingFull BLOG</a>
+    <a href="http://codingfull.tistory.com" target="_blank" title="Move to Blog" style="text-decoration : underline; color:blue;">코딩이 가득한 코딩노트</a>
   </body>
 </html>
