--- a/webapp/3.html
+++ b/webapp/3.html
@@ -4,12 +4,21 @@
     <title>WEB1-javascript</title>
     <meta charset="utf-8">
     <style>
-    #active{
-      color: red;
+    #grid {
+      display: grid;
+      grid-template-columns: 150px 1fr;
     }
-    .saw{
-      color: gray;
+    #grid ol{
+      border-right: 1px solid gray;
+      width: 100px;
+      margin: 0px;
+      padding: 20px;
+      display: inline-block;
     }
+    #article {
+      padding-left: 25px;
+    }
+
     a{
       color : black;
       text-decoration : none;
@@ -17,19 +26,35 @@
     h1{
       font-size:50px;
       text-align : center;
+      border-bottom: 1px solid gray;
+      padding-top: 10px;
+      padding-bottom: 25px;
+      margin: 0px;
+    }
+
+    body{
+      margin: 0px;
+    }
+    p {
+      margin-top: 8px;
+      margin-bottom: 8px;
     }
     </style>
   </head>
   <body>
-    <h1><a href="full.html">WEB</a></h1>
-    <ol>
-      <li><a href="1.html" class="saw">HTML</a></li>
-      <li><a href="2.html" class="saw">CSS</a></li>
-      <li><a href="3.html" class="saw" id="active">JavaScript</a></li>
-    </ol>
-
-    <h2>JavaScript란 무엇인가</h2>
-    <strong>우</strong>르<strong>러</strong>르<strong>라</strong>ㅏ<strong>안</strong>
-    <p style = "margin-top:40px;">가나다라마바사</p><img src="./rabbit.png" width = "50%"><p><a href="https://codingfull.tistory.com" target="_blank" title="블로그로 이동합니다." style="text-decoration : underline; color:blue;">코딩이 가득한 코딩노트</a></p>
+      <h1><a href="full.html">WEB</a></h1>
+      <div id="grid">
+      <ol>
+        <li><a href="1.html" class="saw">HTML</a></li>
+        <li><a href="2.html" class="saw">CSS</a></li>
+        <li><a href="3.html" class="saw" id="active">JavaScript</a></li>
+      </ol>
+      <div id="article">
+        <h2>JavaScript란 무엇인가</h2>
+        <strong>우</strong>르<strong>러</strong>르<strong>라</strong>ㅏ<strong>안</strong>
+        <img src="./rabbit.png" width = "50%">
+      </div>
+    </div>
+    <p style="margin-top: 20px;"><a href="http://codingfull.tistory.com" target="_blank" title="Move to Blog" style="text-decoration : underline; color:black; font-size:small;">코딩이 가득한 코딩노트</a></p>
   </body>
 </html>
