--- a/webapp/full.html
+++ b/webapp/full.html
@@ -4,12 +4,21 @@
     <title> WEB1-index</title>
     <meta charset="utf-8">
     <style>
-    #active{
-      color: red;
+    #grid {
+      display: grid;
+      grid-template-columns: 150px 1fr;
     }
-    .saw{
-      color: gray;
+    #grid ol{
+      border-right: 1px solid gray;
+      width: 100px;
+      margin: 0px;
+      padding: 20px;
+      display: inline-block;
     }
+    #article {
+      padding-left: 25px;
+    }
+
     a{
       color : black;
       text-decoration : none;
@@ -17,18 +26,36 @@
     h1{
       font-size:50px;
       text-align : center;
+      border-bottom: 1px solid gray;
+      padding-top: 10px;
+      padding-bottom: 25px;
+      margin: 0px;
+    }
+
+    body{
+      margin: 0px;
+    }
+    p {
+      margin-top: 8px;
+      margin-bottom: 8px;
     }
     </style>
   </head>
   <body>
     <h1>WEB</h1>
-    <ol>
-      <li><a href="1.html">HTML</a></li>
-      <li><a href="2.html">CSS</a></li>
-      <li><a href="3.html">JavaScript</a></li>
-    </ol>
-    <h2>WEB이란 무엇인가</h2>
-    <p margin-top = "40px"><img src="unsplash.jpg" width = "50%"></p>
-    <a href="http://codingfull.tistory.com" target="_blank" title="Move to Blog" style="text-decoration : underline; color:blue;">코딩이 가득한 코딩노트</a>
+    <div id="grid">
+      <ol>
+        <li><a href="1.html">HTML</a></li>
+        <li><a href="2.html">CSS</a></li>
+        <li><a href="3.html">JavaScript</a></li>
+      </ol>
+      <div id="article">
+        <h2>WEB이란 무엇인가</h2>
+        <p><img src="unsplash.jpg" width = "50%"></p>
+      </div>
+  </div>
+
+  <p style="margin-top: 20px;"><a href="http://codingfull.tistory.com" target="_blank" title="Move to Blog" style="text-decoration : underline; color:black; font-size:small;">코딩이 가득한 코딩노트</a></p>
+
   </body>
 </html>
