--- a/webapp/full.html
+++ b/webapp/full.html
@@ -3,6 +3,7 @@
   <head>
     <title> WEB1-index</title>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
     #grid {
       display: grid;
