--- a/webapp/1.html
+++ b/webapp/1.html
@@ -4,43 +4,7 @@
     <title>WEB1-html</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-    #grid {
-      display: grid;
-      grid-template-columns: 150px 1fr;
-    }
-    #grid ol{
-      border-right: 1px solid gray;
-      width: 100px;
-      margin: 0px;
-      padding: 20px;
-      display: inline-block;
-    }
-    #article {
-      padding-left: 25px;
-    }
-
-    a{
-      color : black;
-      text-decoration : none;
-    }
-    h1{
-      font-size:50px;
-      text-align : center;
-      border-bottom: 1px solid gray;
-      padding-top: 10px;
-      padding-bottom: 25px;
-      margin: 0px;
-    }
-
-    body{
-      margin: 0px;
-    }
-    p {
-      margin-top: 8px;
-      margin-bottom: 8px;
-    }
-    </style>
+    <link rel="stylesheet" href="style.css" type="text/css"/>
   </head>
   <body>
     <h1><a href="full.html">WEB</a></h1>
