토끼 옆으로 치움

--- a/webapp/3.html
+++ b/webapp/3.html
@@ -16,7 +16,7 @@
       </ol>
       <div id="article">
         <h2>JavaScript란 무엇인가</h2>
-        <strong>우</strong>르<strong>러</strong>르<strong>라</strong>ㅏ<strong>안</strong>
+        <p><strong>우</strong>르<strong>러</strong>르<strong>라</strong>ㅏ<strong>안</strong></p>
         <img src="./rabbit.png" width = "50%">
       </div>
     </div>
