--- a/webapp/ext.html
+++ b/webapp/ext.html
@@ -4,34 +4,38 @@
     <title>WEB1-css</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+      function day_and_night(self){
+        var target = document.querySelector('body')
+        var i = 0;
+        var alist = document.querySelectorAll('a');
+          if (self.value == 'night'){
+            while (i < alist.length){
+              alist[i].style.color='powderblue';
+              console.log(alist[i])
+              i++;
+            }
 
+            target.style.backgroundColor='black';
+            target.style.color='white';
+            self.value = 'day';
+          } else{
+            while (i < alist.length){
+              alist[i].style.color='blue';
+              console.log(alist[i])
+              i++;
+            }
+            target.style.backgroundColor='white';
+            target.style.color='black';
+            self.value = 'night';
+          }
+      }
+    </script>
   </head>
   <body>
     <h1><a href="full.html">WEB</a></h1>
     <input type="button" value="night" onclick="
-    var target = document.querySelector('body')
-    var i = 0;
-    var alist = document.querySelectorAll('a');
-      if (this.value == 'night'){
-        while (i < alist.length){
-          alist[i].style.color='powderblue';
-          console.log(alist[i])
-          i++;
-        }
-
-        target.style.backgroundColor='black';
-        target.style.color='white';
-        this.value = 'day';
-      } else{
-        while (i < alist.length){
-          alist[i].style.color='blue';
-          console.log(alist[i])
-          i++;
-        }
-        target.style.backgroundColor='white';
-        target.style.color='black';
-        this.value = 'night';
-      }
+    day_and_night(this);
         ">
     <div id="grid">
       <ol>
@@ -46,29 +50,7 @@
     </div>
     <p style="margin-top: 20px;"><a href="http://codingfull.tistory.com" target="_blank" title="Move to Blog" style="text-decoration : underline; color:black; font-size:small;">코딩이 가득한 코딩노트</a></p>
     <input type="button" value="night" onclick="
-    var target = document.querySelector('body')
-    var i = 0;
-    var alist = document.querySelectorAll('a');
-      if (this.value == 'night'){
-        while (i < alist.length){
-          alist[i].style.color='powderblue';
-          console.log(alist[i])
-          i++;
-        }
-
-        target.style.backgroundColor='black';
-        target.style.color='white';
-        this.value = 'day';
-      } else{
-        while (i < alist.length){
-          alist[i].style.color='blue';
-          console.log(alist[i])
-          i++;
-        }
-        target.style.backgroundColor='white';
-        target.style.color='black';
-        this.value = 'night';
-      }
+    day_and_night(this);
         ">
   </body>
 </html>
