--- a/webapp/ex10.html
+++ b/webapp/ex10.html
@@ -31,5 +31,15 @@
         document.write(coworkers[key] + "<br>");
       }
     </script>
+    <h2>Property & Method</h2>
+    <script>
+      coworkers.showAll = function(){
+        for(var key in this){
+          document.write(key + ' : ' + this[key] + '<br>');
+        }
+      }
+      coworkers.showAll();
+    </script>
+
   </body>
 </html>
