--- a/webapp/1.html
+++ b/webapp/1.html
@@ -5,9 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" type="text/css"/>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="colors.js"></script>
   </head>
   <body>
     <h1><a href="full.html">WEB</a></h1>
+    <input type="button" value="night" onclick="
+    day_and_night(this);
+        ">
     <div id="grid">
       <ol>
         <li><a href="1.html" class="saw" id="active">HTML</a></li>
