--- a/webapp/3.html
+++ b/webapp/3.html
@@ -4,10 +4,15 @@
     <title>WEB1-javascript</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <link rel="stylesheet" href="style.css" type="text/css"/>
+    <script src="colors.js"></script>
   </head>
   <body>
       <h1><a href="full.html">WEB</a></h1>
+      <input type="button" value="night" onclick="
+      day_and_night(this);
+          ">
       <div id="grid">
       <ol>
         <li><a href="1.html" class="saw">HTML</a></li>
